spinqit/compiler/qasm/Qasm2Parser.py
# Copyright 2021 SpinQ Technology Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Generated from Qasm2.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class Qasm2Parser(Parser):
    grammarFileName = "Qasm2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'OPENQASM'", "'include'", "'qreg'", "'qubit'",
                    "'bit'", "'creg'", "'int'", "'uint'", "'float'", "'angle'",
                    "'fixed'", "'bool'", "'const'", "'||'", "'gate'", "'U'",
                    "'CX'", "'measure'", "'barrier'", "'~'", "'!'", "'>'",
                    "'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", "'|'",
                    "'^'", "'&'", "'<<'", "'>>'", "'true'", "'false'",
                    "'++'", "'--'", "'sin'", "'cos'", "'tan'", "'exp'",
                    "'ln'", "'sqrt'", "'rotl'", "'rotr'", "'popcount'",
                    "'lengthof'", "'+='", "'-='", "'*='", "'/='", "'&='",
                    "'|='", "'~='", "'^='", "'<<='", "'>>='", "'if'", "'else'",
                    "'['", "']'", "'{'", "'}'", "'('", "')'", "':'", "';'",
                    "'.'", "','", "'='", "'->'", "'+'", "'-'", "'*'", "'/'",
                    "'%'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN",
                     "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", "EQUALS",
                     "ARROW", "PLUS", "MINUS", "MUL", "DIV", "MOD", "Constant",
                     "Whitespace", "Newline", "Integer", "StretchN", "Identifier",
                     "RealNumber", "TimingLiteral", "StringLiteral", "LineComment",
                     "BlockComment"]

    RULE_program = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_globalStatement = 4
    RULE_statement = 5
    RULE_quantumDeclarationStatement = 6
    RULE_classicalDeclarationStatement = 7
    RULE_assignmentStatement = 8
    RULE_returnSignature = 9
    RULE_designator = 10
    RULE_doubleDesignator = 11
    RULE_identifierList = 12
    RULE_quantumDeclaration = 13
    RULE_quantumArgument = 14
    RULE_quantumArgumentList = 15
    RULE_bitType = 16
    RULE_singleDesignatorType = 17
    RULE_doubleDesignatorType = 18
    RULE_noDesignatorType = 19
    RULE_classicalType = 20
    RULE_constantDeclaration = 21
    RULE_singleDesignatorDeclaration = 22
    RULE_doubleDesignatorDeclaration = 23
    RULE_noDesignatorDeclaration = 24
    RULE_bitDeclaration = 25
    RULE_classicalDeclaration = 26
    RULE_classicalTypeList = 27
    RULE_classicalArgument = 28
    RULE_classicalArgumentList = 29
    RULE_indexIdentifier = 30
    RULE_indexIdentifierList = 31
    RULE_rangeDefinition = 32
    RULE_quantumGateDefinition = 33
    RULE_quantumGateParameter = 34
    RULE_quantumGateName = 35
    RULE_quantumGateSignature = 36
    RULE_quantumBlock = 37
    RULE_quantumLoopBlock = 38
    RULE_quantumStatement = 39
    RULE_quantumInstruction = 40
    RULE_quantumMeasurement = 41
    RULE_quantumMeasurementAssignment = 42
    RULE_quantumBarrier = 43
    RULE_quantumGateCall = 44
    RULE_unaryOperator = 45
    RULE_comparisonOperator = 46
    RULE_equalityOperator = 47
    RULE_logicalOperator = 48
    RULE_expressionStatement = 49
    RULE_expression = 50
    RULE_logicalAndExpression = 51
    RULE_bitOrExpression = 52
    RULE_xOrExpression = 53
    RULE_bitAndExpression = 54
    RULE_equalityExpression = 55
    RULE_comparisonExpression = 56
    RULE_bitShiftExpression = 57
    RULE_additiveExpression = 58
    RULE_multiplicativeExpression = 59
    RULE_unaryExpression = 60
    RULE_expressionTerminator = 61
    RULE_booleanLiteral = 62
    RULE_incrementor = 63
    RULE_builtInCall = 64
    RULE_builtInMath = 65
    RULE_castOperator = 66
    RULE_expressionList = 67
    RULE_equalsExpression = 68
    RULE_assignmentOperator = 69
    RULE_setDeclaration = 70
    RULE_programBlock = 71
    RULE_branchingStatement = 72

    ruleNames = ["program", "header", "version", "include", "globalStatement",
                 "statement", "quantumDeclarationStatement", "classicalDeclarationStatement",
                 "assignmentStatement", "returnSignature", "designator",
                 "doubleDesignator", "identifierList", "quantumDeclaration",
                 "quantumArgument", "quantumArgumentList", "bitType",
                 "singleDesignatorType", "doubleDesignatorType", "noDesignatorType",
                 "classicalType", "constantDeclaration", "singleDesignatorDeclaration",
                 "doubleDesignatorDeclaration", "noDesignatorDeclaration",
                 "bitDeclaration", "classicalDeclaration", "classicalTypeList",
                 "classicalArgument", "classicalArgumentList", "indexIdentifier",
                 "indexIdentifierList", "rangeDefinition", "quantumGateDefinition",
                 "quantumGateParameter", "quantumGateName", "quantumGateSignature",
                 "quantumBlock", "quantumLoopBlock", "quantumStatement",
                 "quantumInstruction", "quantumMeasurement", "quantumMeasurementAssignment",
                 "quantumBarrier", "quantumGateCall", "unaryOperator",
                 "comparisonOperator", "equalityOperator", "logicalOperator",
                 "expressionStatement", "expression", "logicalAndExpression",
                 "bitOrExpression", "xOrExpression", "bitAndExpression",
                 "equalityExpression", "comparisonExpression", "bitShiftExpression",
                 "additiveExpression", "multiplicativeExpression", "unaryExpression",
                 "expressionTerminator", "booleanLiteral", "incrementor",
                 "builtInCall", "builtInMath", "castOperator", "expressionList",
                 "equalsExpression", "assignmentOperator", "setDeclaration",
                 "programBlock", "branchingStatement"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    T__51 = 52
    T__52 = 53
    T__53 = 54
    T__54 = 55
    T__55 = 56
    T__56 = 57
    T__57 = 58
    T__58 = 59
    LBRACKET = 60
    RBRACKET = 61
    LBRACE = 62
    RBRACE = 63
    LPAREN = 64
    RPAREN = 65
    COLON = 66
    SEMICOLON = 67
    DOT = 68
    COMMA = 69
    EQUALS = 70
    ARROW = 71
    PLUS = 72
    MINUS = 73
    MUL = 74
    DIV = 75
    MOD = 76
    Constant = 77
    Whitespace = 78
    Newline = 79
    Integer = 80
    StretchN = 81
    Identifier = 82
    RealNumber = 83
    TimingLiteral = 84
    StringLiteral = 85
    LineComment = 86
    BlockComment = 87

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(Qasm2Parser.HeaderContext, 0)

        def EOF(self):
            return self.getToken(Qasm2Parser.EOF, 0)

        def globalStatement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Qasm2Parser.GlobalStatementContext)
            else:
                return self.getTypedRuleContext(Qasm2Parser.GlobalStatementContext, i)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Qasm2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Qasm2Parser.StatementContext, i)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):

        localctx = Qasm2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.header()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << Qasm2Parser.T__2) | (1 << Qasm2Parser.T__4) | (1 << Qasm2Parser.T__5) | (
                    1 << Qasm2Parser.T__6) | (1 << Qasm2Parser.T__7) | (1 << Qasm2Parser.T__8) | (
                            1 << Qasm2Parser.T__9) | (1 << Qasm2Parser.T__10) | (1 << Qasm2Parser.T__11) | (
                            1 << Qasm2Parser.T__12) | (1 << Qasm2Parser.T__14) | (1 << Qasm2Parser.T__15) | (
                            1 << Qasm2Parser.T__16) | (1 << Qasm2Parser.T__17) | (1 << Qasm2Parser.T__18) | (
                            1 << Qasm2Parser.T__57))) != 0) or _la == Qasm2Parser.Identifier:
                self.state = 149
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [Qasm2Parser.T__2, Qasm2Parser.T__4, Qasm2Parser.T__5, Qasm2Parser.T__6, Qasm2Parser.T__7,
                             Qasm2Parser.T__8, Qasm2Parser.T__9, Qasm2Parser.T__10, Qasm2Parser.T__11,
                             Qasm2Parser.T__12, Qasm2Parser.T__14]:
                    self.state = 147
                    self.globalStatement()
                    pass
                elif token in [Qasm2Parser.T__15, Qasm2Parser.T__16, Qasm2Parser.T__17, Qasm2Parser.T__18,
                               Qasm2Parser.T__57, Qasm2Parser.Identifier]:
                    self.state = 148
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(Qasm2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(Qasm2Parser.VersionContext, 0)

        def include(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Qasm2Parser.IncludeContext)
            else:
                return self.getTypedRuleContext(Qasm2Parser.IncludeContext, i)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_header

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)

    def header(self):

        localctx = Qasm2Parser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == Qasm2Parser.T__0:
                self.state = 156
                self.version()

            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == Qasm2Parser.T__1:
                self.state = 159
                self.include()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(Qasm2Parser.SEMICOLON, 0)

        def Integer(self):
            return self.getToken(Qasm2Parser.Integer, 0)

        def RealNumber(self):
            return self.getToken(Qasm2Parser.RealNumber, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_version

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVersion"):
                listener.enterVersion(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVersion"):
                listener.exitVersion(self)

    def version(self):

        localctx = Qasm2Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(Qasm2Parser.T__0)
            self.state = 166
            _la = self._input.LA(1)
            if not (_la == Qasm2Parser.Integer or _la == Qasm2Parser.RealNumber):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 167
            self.match(Qasm2Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(Qasm2Parser.StringLiteral, 0)

        def SEMICOLON(self):
            return self.getToken(Qasm2Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_include

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInclude"):
                listener.enterInclude(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInclude"):
                listener.exitInclude(self)

    def include(self):

        localctx = Qasm2Parser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(Qasm2Parser.T__1)
            self.state = 170
            self.match(Qasm2Parser.StringLiteral)
            self.state = 171
            self.match(Qasm2Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantumDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.QuantumDeclarationStatementContext, 0)

        def quantumGateDefinition(self):
            return self.getTypedRuleContext(Qasm2Parser.QuantumGateDefinitionContext, 0)

        def classicalDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.ClassicalDeclarationStatementContext, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_globalStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGlobalStatement"):
                listener.enterGlobalStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGlobalStatement"):
                listener.exitGlobalStatement(self)

    def globalStatement(self):

        localctx = Qasm2Parser.GlobalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_globalStatement)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Qasm2Parser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.quantumDeclarationStatement()
                pass
            elif token in [Qasm2Parser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.quantumGateDefinition()
                pass
            elif token in [Qasm2Parser.T__4, Qasm2Parser.T__5, Qasm2Parser.T__6, Qasm2Parser.T__7, Qasm2Parser.T__8,
                           Qasm2Parser.T__9, Qasm2Parser.T__10, Qasm2Parser.T__11, Qasm2Parser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.classicalDeclarationStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantumStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.QuantumStatementContext, 0)

        def assignmentStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.AssignmentStatementContext, 0)

        def branchingStatement(self):
            return self.getTypedRuleContext(Qasm2Parser.BranchingStatementContext, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

    def statement(self):

        localctx = Qasm2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.quantumStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.assignmentStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 180
                self.branchingStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuantumDeclarationStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantumDeclaration(self):
            return self.getTypedRuleContext(Qasm2Parser.QuantumDeclarationContext, 0)

        def SEMICOLON(self):
            return self.getToken(Qasm2Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Qasm2Parser.RULE_quantumDeclarationStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantumDeclarationStatement"):
                listener.enterQuantumDeclarationStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantumDeclarationStatement"):
                listener.exitQuantumDeclarationStatement(self)

    def quantumDeclarationStatement(self):
